--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,20 @@
 {
-    "name": "johnshopkins/cache-exchange",
-    "description": "A collection of PHP interfaces and adapters to make swapping out cache library dependencies quick and easy.",
-    "homepage": "http://github.com/johnshopkins/cache-exchange",
-    "license": "MIT",
-    "require": {
-        "php": ">=5.3.2"
-    },
-    "autoload": {
-        "psr-0" : {
-            "CacheExchange" : "src/"
-        }
+  "name": "johnshopkins/cache-exchange",
+  "description": "A collection of adapters to make swapping out cache library dependencies quick and easy.",
+  "homepage": "http://github.com/johnshopkins/cache-exchange",
+  "license": "MIT",
+  "require": {
+    "php": ">=8.0"
+  },
+  "autoload": {
+    "psr-4" : {
+      "CacheExchange\\" : ["src/", "tests/"]
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^11.3"
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit --display-phpunit-deprecations --display-deprecations --display-errors --display-warnings --display-notices ./tests"
+  }
 }
